# valorant

./: .gitignore  CLAUDE.md  coordinator.py  get_all_game_details.py  worker.py
eda/: 00_validate_labels.ipynb  01_overview.ipynb  02_map_analysis.ipynb  03_player_performance.ipynb  04_economy.ipynb  05_round_level.ipynb  06_team_trajectory.ipynb  07_offseason_analysis.ipynb  analysis_results.md  generate_labels_csv.py  offseason_analysis_results.md  tournament_labels.csv  utils.py
output/: data_dictionary.md  map_rounds.parquet  map_vetos.parquet  maps.parquet  matches.parquet  qa_report.md  series_advanced_stats.parquet  series_economy.parquet  series_kill_matrix.parquet  teams.parquet
parser/: __init__.py  data_dictionary.py  loader.py  main.py  qa.py  utils.py  veto_overrides.json  veto_resolver.py
parser/transforms/: __init__.py  map_player_stats.py  map_rounds.py  map_vetos.py  maps.py  matches.py  series_advanced_stats.py  series_economy.py  series_kill_matrix.py  teams.py
scraper/: clean_failed_from_outputs.py  collect_failed.py  coordinator.py  get_all_game_details.py
vlrggapi/: pyproject.toml  worker.py
