[project]
name = "vlrggapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cachetools==7.1.1",
    "fastapi==0.136.1",
    "httpx==0.28.1",
    "lxml==6.1.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "selectolax==0.4.8",
    "uvicorn==0.46.0",
]
